[TASK] prevent too large lightboxes

--- a/Resources/Private/Scss/_ondrop.vimeo-grid.scss
+++ b/Resources/Private/Scss/_ondrop.vimeo-grid.scss
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 5vw;
+    padding: 0% + $popup-padding-amount;
     opacity: 0;
     transition: opacity $transition-default;
     z-index: 1051; //bootstrap modal + 1
@@ -75,6 +75,25 @@
         left: 0;
         background-color: rgba($color-black, 0.75);
         z-index: -1;
+    }
+    &__embed-container {
+        position: relative;
+        display: block;
+        height: 0;
+        padding: 0;
+        overflow: hidden;
+        padding-bottom: 56.25%;
+        iframe {
+            position: absolute;
+            top: 50%;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+            transform: translateY(-50%);
+            max-height: 100vh - $popup-padding-amount * 2;
+        }
     }
     &.open {
         opacity: 1;
